# vk-deferred

./: CMakeLists.txt  CMakePresets.json  Frame.cppm  Gpu.cppm  LICENSE.txt  MainApp.cppm  README.md  SharedData.cppm  attachment_groups.cppm  descriptor_set_layouts.cppm  main.cpp  meshes.cppm  mod.cppm  pipelines.cppm  render_passes.cppm  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CMakeUserPresets.json  clang-toolchain.cmake  linux.yml  macos.yml  windows.yml  x64-linux-clang.cmake
.github/workflows/scripts/: CMakeUserPresets.json  arm64-osx-clang-toolchain.cmake  x64-linux-clang-toolchain.cmake
.github/workflows/scripts/triplets/: arm64-osx-clang.cmake
.github/workflows/triplets/: x64-linux-clang.cmake
extlibs/module-ports/: glm.cppm
interface/: MainApp.cppm
interface/vulkan/: Frame.cppm  Gpu.cppm  SharedData.cppm
interface/vulkan/attachment_group/: DeferredLighting.cppm  DeferredLightingAttachmentGroup.cppm  GBuffer.cppm  GBufferAttachmentGroup.cppm  Swapchain.cppm  SwapchainAttachmentGroup.cppm
interface/vulkan/buffer/: FloorTransforms.cppm  LightInstances.cppm  SphereTransforms.cppm
interface/vulkan/descriptor_set_layout/: DeferredLightRendererDescriptorSetLayout.cppm  GBufferInput.cppm  HdrInput.cppm  ToneMappingRendererDescriptorSetLayout.cppm
interface/vulkan/mesh/: Floor.cppm  Sphere.cppm
interface/vulkan/pipeline/: DeferredLightRenderer.cppm  GBufferRenderer.cppm  ToneMappingRenderer.cppm
interface/vulkan/render_pass/: Deferred.cppm  DeferredRenderPass.cppm
overlays/vku/: portfile.cmake  usage  vcpkg-deps.patch  vcpkg.json
shaders/: deferred_lighting.frag  full_triangle.vert  gbuffer.frag  light_volume.vert  pn_instanced.vert  rec709.frag
